--- a/src/main/resources/templates/profile/profile.html
+++ b/src/main/resources/templates/profile/profile.html
@@ -25,7 +25,7 @@
     </table>
     <div class="button-group">
       <button onclick="location.href='/profile/edit'">수정</button>
-      <button onclick="location.href='/board/list'">취소</button>
+      <button onclick="history.back()">취소</button>
       <form th:action="@{/profile/delete}" method="post" style="display:inline;">
         <button type="submit">탈퇴</button>
       </form>
