Fix : 커밋 코드 분석 문제 수용

--- a/src/main/resources/static/css/admin/admin.css
+++ b/src/main/resources/static/css/admin/admin.css
@@ -35,7 +35,7 @@
 }
 
 .card-item.center {
-    flex: 0 0 0px; /* 기존 80px에서 25px으로 줄임 */
+    flex: 0 0 1; /* 기존 80px에서 1px으로 줄임 */
     text-align: center;
 }
 
