--- a/src/main/resources/templates/user/findId.html
+++ b/src/main/resources/templates/user/findId.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/user/findId.css">
     <title>아이디 찾기 페이지</title>
 </head>
