--- a/src/main/resources/templates/user/findPw.html
+++ b/src/main/resources/templates/user/findPw.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/user/findPw.css">
     <title>비밀번호 찾기 페이지</title>
 </head>
