--- a/src/main/resources/templates/user/signUp.html
+++ b/src/main/resources/templates/user/signUp.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/user/signUp.css">
     <title>회원가입 페이지</title>
 </head>
@@ -35,7 +36,7 @@
             <span>-</span>
             <input type="text" id="contactSuffix" maxlength="4" required>
         </div>
-        <input type="hidden" name="contact" id="contact">
+        <input type="hidden" id="contact" name="contact">
 
         <label for="email">이메일</label>
         <input type="email" name="email" id="email" required>
