--- a/src/main/resources/templates/board/edit.html
+++ b/src/main/resources/templates/board/edit.html
@@ -2,26 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 <head>
-    <title>Board Edit</title>
+    <title>게시판 수정</title>
 </head>
 <body>
 <main layout:fragment="content">
     <form th:action="@{/board/{boardId}(boardId=${boardId})}" th:method="patch">
-        <table border="1">
-            <tr>
-                <td>게시판명 : <input type="text" name="boardTitle" th:value="${board.boardTitle}"></td>
-            </tr>
-            <tr>
-                <td>
-                    <button type="submit" class="button">확인</button>
-                </td>
-                <td>
-                    <a th:href="'/post/list/'+${boardId}">취소</a>
-                </td>
-            </tr>
-        </table>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="게시판 제목" th:field="${board.boardTitle}" required/>
+            <button class="btn btn-outline-secondary" type="submit">확인</button>
+            <button class="btn btn-outline-secondary" type="button" onclick="history.back()">취소</button>
+        </div>
     </form>
-
 </main>
 </body>
 </html>
