--- a/src/main/resources/templates/post/register.html
+++ b/src/main/resources/templates/post/register.html
@@ -7,23 +7,21 @@
 <body>
 <main layout:fragment="content">
     <form th:action="@{/post/register}" th:object="${post}" method="post">
-<!--        <div>-->
-<!--            <label for="userId">UserID:</label>-->
-<!--            <input type="text" id="userId" th:field="*{userId}" required />-->
-<!--        </div>-->
         <div>
             <input type="hidden" name="boardId" th:value="${boardId}" />
         </div>
-        <div>
-            <label for="postTitle">Title:</label>
-            <input type="text" id="postTitle" th:field="*{postTitle}" required />
+        <div class="mb-3">
+            <label for="postTitle" class="form-label">제목</label>
+            <input type="text" class="form-control" id="postTitle" name="postTitle" th:field="*{postTitle}"
+                   required/>
         </div>
-        <div>
-            <label for="postContent">Content:</label>
-            <input type="text" id="postContent" th:field="*{postContent}"/>
+        <div class="mb-3">
+            <label for="postContent" class="form-label">내용</label>
+            <textarea class="form-control" id="postContent" name="postContent" th:text="*{postContent}"
+                      rows="5" required></textarea>
+            <button type="submit" class="btn">확인</button>
+            <button type="button" class="btn" onclick="history.back()">취소</button>
         </div>
-        <button type="submit" class="button">등록</button>
-        <button type="button" th:onclick="'location.href=\'/post/list/' + ${boardId} + '\''">취소</button>
     </form>
 </main>
 </body>
