--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: Noto Sans;
+    src: url('/fonts/NotoSansKR-VariableFont_wght.ttf');
+}
+
+body {
+    font-family: 'Noto Sans', sans-serif;
+}
+
 header, main, footer {
     max-width: 1280px;
     margin: auto;
