--- a/src/main/resources/static/css/profile/edit.css
+++ b/src/main/resources/static/css/profile/edit.css
@@ -1,41 +1,28 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body, html {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.findIdContainer {
+.editContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 50%;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
-.findIdTitle {
+.editTitle {
     font-size: 45px;
     font-weight: bold;
 }
 
-.findIdContent {
+.editContent {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 
 form {
     display: flex;
     flex-direction: column;
-    gap: 20px;
     font-size: 14px;
 }
 
@@ -43,18 +30,37 @@ label {
     display: none;
 }
 
+#userId,
 #userName {
     width: 400px;
     height: 40px;
     padding: 6px;
     border-radius: 5px;
     border: 1px solid #667373;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #f1f1f1;
+}
+
+#existingPw,
+#userPw,
+#confirmPw,
+#email {
+    width: 400px;
+    height: 40px;
+    padding: 6px;
+    border-radius: 5px;
+    border: 1px solid #667373;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .contactContainer {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .contactContainer span {
@@ -82,10 +88,11 @@ label {
     display: flex;
     justify-content: center;
     gap: 10%;
+    margin-top: 20px
 }
 
-.findIdBtn,
-.homeBtn {
+.editBtn,
+.cancelBtn {
     width: 200px;
     height: 50px;
     border-radius: 5px;
@@ -93,18 +100,12 @@ label {
     background-color: #FFFFFF;
     border: 1px solid #667373;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 16px;
 }
 
-.findIdBtn:active,
-.homeBtn:active {
+.editBtn:active,
+.cancelBtn:active {
     color: #FFFFFF;
     background-color: #B4D4FD;
     border: 1px solid #B4D4FD;
-}
-
-.blank {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
