--- a/src/main/resources/static/css/user/findPw.css
+++ b/src/main/resources/static/css/user/findPw.css
@@ -16,24 +16,64 @@ body, html {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    width: 50%;
 }
 
 .findPwTitle {
-    font-size: 30px;
+    font-size: 45px;
+    font-weight: bold;
 }
 
 .findPwContent {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 30px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    font-size: 14px;
 }
 
 label {
-    display: block;
+    display: none;
+}
+
+#userName,
+#email {
+    width: 400px;
+    height: 40px;
+    padding: 6px;
+    border-radius: 5px;
+    border: 1px solid #667373;
 }
 
 .btnSection {
     display: flex;
     justify-content: center;
     gap: 10%;
+    margin-top: 20px;
+}
+
+.findPwBtn,
+.homeBtn {
+    width: 200px;
+    height: 50px;
+    border-radius: 5px;
+    color: #667373;
+    background-color: #FFFFFF;
+    border: 1px solid #667373;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.findPwBtn:active,
+.homeBtn:active {
+    color: #FFFFFF;
+    background-color: #B4D4FD;
+    border: 1px solid #B4D4FD;
 }
