--- a/src/main/resources/static/css/user/login.css
+++ b/src/main/resources/static/css/user/login.css
@@ -33,16 +33,17 @@ body, html {
 }
 
 .loginTitle {
-    display: flex;
-    justify-content: center;
-    font-size: 40px;
+    font-size: 45px;
+    font-weight: bold;
+    margin: 0;
 }
 
 .loginForm {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 12px;
+    font-size: 12px;
 }
 
 .id {
@@ -55,10 +56,16 @@ body, html {
     flex-direction: column;
 }
 
+.id label,
+.pw label {
+    display: none;
+}
+
 .id input,
 .pw input {
-    width: 200px;
-    height: 25px;
+    width: 300px;
+    height: 35px;
+    padding: 6px;
     border-radius: 5px;
     border: 1px solid #667373;
 }
@@ -68,7 +75,7 @@ label {
 }
 
 .loginOption {
-    font-size: 12px;
+    font-size: 13px;
 }
 
 #rememberMe {
@@ -77,12 +84,14 @@ label {
 
 .loginBtn,
 .signUpBtn {
-    width: 200px;
-    height: 40px;
+    width: 300px;
+    height: 50px;
     border-radius: 5px;
-    color: #000;
+    color: #667373;
     background-color: #FFFFFF;
     border: 1px solid #667373;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .loginBtn:active,
@@ -97,7 +106,7 @@ label {
 }
 
 .signUpFind a {
-    font-size: 12px;
+    font-size: 13px;
     color: black;
     text-decoration: none;
 }
