--- a/src/main/resources/static/css/user/signUp.css
+++ b/src/main/resources/static/css/user/signUp.css
@@ -16,33 +16,97 @@ body, html {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    width: 50%;
 }
 
 .signUpTitle {
-    font-size: 30px;
+    font-size: 45px;
+    font-weight: bold;
 }
 
 .signUpContent {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    font-size: 13px;
 }
 
 label {
-    display: block;
+    display: none;
+}
+
+#userId,
+#userPw,
+#confirmPw,
+#userName,
+#email {
+    width: 400px;
+    height: 40px;
+    padding: 6px;
+    border-radius: 5px;
+    border: 1px solid #667373;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.contactContainer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.contactContainer span {
+    font-size: 20px;
 }
 
 #contactPrefix {
-    width: 80px;
+    width: 100px;
+    height: 40px;
+    padding: 6px;
+    border-radius: 5px;
+    border: 1px solid #667373;
 }
 
 #contactMiddle,
 #contactSuffix {
-    width: 100px;
+    width: 130px;
+    height: 40px;
+    padding: 6px;
+    border-radius: 5px;
+    border: 1px solid #667373;
 }
 
 .btnSection {
     display: flex;
     justify-content: center;
     gap: 10%;
+    margin-top: 20px
+}
+
+.signUpBtn,
+.cancelBtn {
+    width: 200px;
+    height: 50px;
+    border-radius: 5px;
+    color: #667373;
+    background-color: #FFFFFF;
+    border: 1px solid #667373;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.signUpBtn:active,
+.cancelBtn:active {
+    color: #FFFFFF;
+    background-color: #B4D4FD;
+    border: 1px solid #B4D4FD;
 }
