--- a/src/main/resources/templates/activity/follower.html
+++ b/src/main/resources/templates/activity/follower.html
@@ -2,26 +2,36 @@
 <html xmlns:th="http://www.thymeleaf.org/" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layout}">
 <head>
+  <link rel="stylesheet" href="/css/activity/activityFllower.css">
   <title>Post Detail</title>
 </head>
 <body>
 <main layout:fragment="content">
-  <ul>
-    <li>
-      <a href="/activity">작성한 게시물</a>
-    </li>
-    <li>
-      <a href="/activity/bookmark">즐겨찾기한 게시물</a>
-    </li>
-    <li>
-      <a href="/activity/follow">팔로우한 유저 게시물</a>
-    </li>
-    <li>
-      <a href="/activity/follower">팔로워</a>
-    </li>
-  </ul>
-  <div>
-    <table border="1">
+  <section>
+    <ul>
+      <li>
+        <a th:href="@{/activity}"
+           th:classappend="${activeMenu == 'posts'} ? 'active'">작성한 게시물</a>
+      </li>
+      <li>
+        <a th:href="@{/activity/bookmark}"
+           th:classappend="${activeMenu == 'scraps'} ? 'active'">즐겨찾기한 게시물</a>
+      </li>
+      <li>
+        <a th:href="@{/activity/follow}"
+           th:classappend="${activeMenu == 'follow'} ? 'active'">팔로우한 유저 게시물</a>
+      </li>
+      <li>
+        <a th:href="@{/activity/follower}"
+           th:classappend="${activeMenu == 'follower'} ? 'active'">팔로워</a>
+      </li>
+    </ul>
+  </section>
+  <div class="container">
+    <div  class="activityTitle">
+      <p>나를 팔로우한 팔로워</p>
+    </div>
+    <table class="table">
       <tr th:each="user : ${users}">
         <td th:text="${user.userName}">default value</td>
       </tr>
