--- a/src/main/resources/templates/global/error.html
+++ b/src/main/resources/templates/global/error.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="/css/global/error.css">
+    <title>에러 페이지</title>
 </head>
 <body>
-
+<div class="container">
+    <div class="content">
+        <img class="errorPage" src="/img/homeLogo.png"><br>
+        <p class="text">요청하신 페이지를 찾을 수 없습니다.</p><br>
+        <p class="subText">※ 링크가 잘못되었거나 페이지가 삭제되었을 수 있습니다.</p><br>
+        <button type="button" class="homeBtn" th:onclick="|location.href='@{/board/list}'|">
+            메인 페이지로 이동
+        </button>
+    </div>
+</div>
 </body>
 </html>
