--- a/src/main/resources/templates/profile/edit.html
+++ b/src/main/resources/templates/profile/edit.html
@@ -1,56 +1,59 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout}">
 <head>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script th:src="@{/js/profile/edit.js}"></script>
+    <link rel="stylesheet" href="/css/profile/edit.css">
     <title>프로필 수정 페이지</title>
 </head>
 <body>
 <main layout:fragment="content">
-    <div class="container">
-        <h1>회원정보 수정</h1>
-        <form th:action="@{/profile/edit}" method="post">
-            <label for="userId">아이디(수정불가)</label>
-            <input type="text" id="userId" name="userId" th:value="${profile.userId}" readonly>
+    <div class="editContainer">
+        <p class="editTitle">회원정보 수정</p>
+        <div class="editContent">
+            <form th:action="@{/profile/edit}" method="post">
+                <label for="userId">아이디</label>
+                <input type="text" id="userId" name="userId" th:value="${profile.userId}" readonly>
 
-            <label for="userName">이름(수정불가)</label>
-            <input type="text" id="userName" name="userName" th:value="${profile.userName}" readonly>
+                <label for="userName">이름</label>
+                <input type="text" id="userName" name="userName" th:value="${profile.userName}" readonly>
 
-            <label for="existingPw">기존 비밀번호</label>
-            <input type="password" id="existingPw" name="existingPw" required>
-            <div id="existingPwFeedback" class="feedback"></div>
+                <label for="existingPw">기존 비밀번호</label>
+                <input type="password" id="existingPw" name="existingPw" required placeholder="기존 비밀번호">
+                <div id="existingPwFeedback" class="feedback"></div>
 
-            <label for="userPw">새로운 비밀번호</label>
-            <input type="password" id="userPw" name="userPw">
-            <div id="pwFeedback" class="feedback"></div>
+                <label for="userPw">새로운 비밀번호</label>
+                <input type="password" id="userPw" name="userPw" placeholder="새로운 비밀번호로 변경을 원할 시 입력하세요">
+                <div id="pwFeedback" class="feedback"></div>
 
-            <label for="userPw">새로운 비밀번호 확인</label>
-            <input type="password" id="confirmPw" name="confirmPw">
-            <div id="confirmPwFeedback" class="feedback"></div>
+                <label for="confirmPw">새로운 비밀번호 확인</label>
+                <input type="password" id="confirmPw" name="confirmPw" placeholder="새로운 비밀번호를 확인합니다">
+                <div id="confirmPwFeedback" class="feedback"></div>
 
-            <label>연락처</label>
-            <div class="contactContainer">
-                <select id="contactPrefix">
-                    <option value="010" th:selected="${profile.contact?.startsWith('010')}">010</option>
-                    <option value="011" th:selected="${profile.contact?.startsWith('011')}">011</option>
-                </select>
-                <span>-</span>
-                <input type="text" id="contactMiddle" maxlength="4" required th:value="${#strings.substring(profile.contact, 4, 8)}">
-                <span>-</span>
-                <input type="text" id="contactSuffix" maxlength="4" required th:value="${#strings.substring(profile.contact, 9, 13)}">
-            </div>
-            <input type="hidden" id="contact" name="contact" th:value="${profile.contact}">
+                <label>연락처</label>
+                <div class="contactContainer">
+                    <select id="contactPrefix">
+                        <option value="010" th:selected="${profile.contact?.startsWith('010')}">010</option>
+                        <option value="011" th:selected="${profile.contact?.startsWith('011')}">011</option>
+                    </select>
+                    <span>-</span>
+                    <input type="text" id="contactMiddle" maxlength="4" required th:value="${#strings.substring(profile.contact, 4, 8)}">
+                    <span>-</span>
+                    <input type="text" id="contactSuffix" maxlength="4" required th:value="${#strings.substring(profile.contact, 9, 13)}">
+                </div>
+                <input type="hidden" id="contact" name="contact" th:value="${profile.contact}">
 
-            <label for="email">이메일</label>
-            <input type="email" id="email" name="email" th:value="${profile.email}">
-            <div id="emailFeedback" class="feedback"></div>
+                <label for="email">이메일</label>
+                <input type="email" id="email" name="email" th:value="${profile.email}">
+                <div id="emailFeedback" class="feedback"></div>
 
-            <div class="btnSection">
-                <button type="submit">수정</button>
-                <button type="button" class="cancelBtn">취소</button>
-            </div>
-        </form>
+                <div class="btnSection">
+                    <button type="submit" class="editBtn">수정</button>
+                    <button type="button" class="cancelBtn">취소</button>
+                </div>
+            </form>
+        </div>
     </div>
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script th:src="@{/js/profile/edit.js}"></script>
 </main>
 </body>
 </html>
