--- a/src/main/resources/templates/user/findId.html
+++ b/src/main/resources/templates/user/findId.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/user/common.css">
     <link rel="stylesheet" href="/css/user/findId.css">
     <title>아이디 찾기 페이지</title>
 </head>
@@ -11,8 +12,7 @@
     <div class="findIdContent">
         <form>
             <label for="userName">이름</label>
-            <input type="text" name="userName" id="userName" required>
-
+            <input type="text" name="userName" id="userName" required placeholder="이름">
             <label>연락처</label>
             <div class="contactContainer">
                 <select id="contactPrefix">
@@ -20,15 +20,16 @@
                     <option value="011">011</option>
                 </select>
                 <span>-</span>
-                <input type="text" id="contactMiddle" maxlength="4" required>
+                <input type="text" id="contactMiddle" maxlength="4" required placeholder="연락처를">
                 <span>-</span>
-                <input type="text" id="contactSuffix" maxlength="4" required>
+                <input type="text" id="contactSuffix" maxlength="4" required placeholder="입력해주세요">
             </div>
             <input type="hidden" name="contact" id="contact">
+
             <div id="userIdDisplay" class="blank"></div>
             <div class="btnSection">
                 <button type="submit" class="findIdBtn" id="findIdBtn">아이디 찾기</button>
-                <button type="button" class="homeBtn">로그인페이지로 이동</button>
+                <button type="button" class="homeBtn">로그인</button>
             </div>
         </form>
     </div>
