--- a/src/main/resources/templates/user/findPw.html
+++ b/src/main/resources/templates/user/findPw.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/user/common.css">
     <link rel="stylesheet" href="/css/user/findPw.css">
     <title>비밀번호 찾기 페이지</title>
 </head>
@@ -11,14 +12,14 @@
     <div class="findPwContent">
         <form>
             <label for="userName">이름</label>
-            <input type="text" name="userName" id="userName" required>
+            <input type="text" name="userName" id="userName" required placeholder="이름">
 
             <label for="email">이메일</label>
-            <input type="email" name="email" id="email" required>
+            <input type="email" name="email" id="email" required placeholder="이메일">
 
             <div class="btnSection">
                 <button type="submit" class="findPwBtn" id="findPwBtn">임시 비밀번호 발급</button>
-                <button type="button" class="homeBtn">로그인페이지로 이동</button>
+                <button type="button" class="homeBtn">로그인</button>
             </div>
         </form>
     </div>
