--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/user/common.css">
     <link rel="stylesheet" href="/css/user/login.css">
     <title>로그인 페이지</title>
 </head>
@@ -10,18 +11,16 @@
     <img th:src="@{/img/logo.png}">
 </div>
 <div class="loginContainer">
-    <div class="loginTitle">
-        <p>로그인</p>
-    </div>
-    <div >
+    <p class="loginTitle">로그인</p>
+    <div>
         <form class="loginForm">
             <div class="id">
                 <label>아이디</label>
-                <input type="text" name="username" id="username">
+                <input type="text" name="username" id="username" placeholder="아이디">
             </div>
             <div class="pw">
                 <label>비밀번호</label>
-                <input type="password" name="password" id="userPw">
+                <input type="password" name="password" id="userPw" placeholder="비밀번호">
             </div>
             <div class="loginOption">
                 <label>
